--- a/Efecto Pasillo/Venetian300x600.html
+++ b/Efecto Pasillo/Venetian300x600.html
@@ -2137,10 +2137,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
 #i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 276px; height: 108px;
-        -ms-transform: translate(0, 0) translate(12px, 390px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(12px, 390px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(12px, 390px) rotate(0deg);
-        transform: translate(0, 0) translate(12px, 390px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(12px, 379px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(12px, 379px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(12px, 379px) rotate(0deg);
+        transform: translate(0, 0) translate(12px, 379px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2155,10 +2155,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
 #i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 350px;
-        -ms-transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 39px;
@@ -2169,10 +2169,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
 #i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 272px; height: 51px;
-        -ms-transform: translate(0, 0) translate(14px, 508px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(14px, 508px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(14px, 508px) rotate(0deg);
-        transform: translate(0, 0) translate(14px, 508px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(14px, 502px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(14px, 502px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(14px, 502px) rotate(0deg);
+        transform: translate(0, 0) translate(14px, 502px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2236,15 +2236,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i16 { opacity: 1; }
 /*#/#*//*#i52.text.css:text/base/css*/
 #i52 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i48.image.css:image/base/css*/
-#i48 { opacity: 1; }
-/*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
-#i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 135px; height: 34px;
-        -ms-transform: translate(0, 0) translate(83px, 333px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(83px, 333px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(83px, 333px) rotate(0deg);
-        transform: translate(0, 0) translate(83px, 333px) rotate(0deg);
-}
 /*#/#*//*#i26.button.css:button/base/css*/
 #i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(153,153,153,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i26:hover { opacity: 1; background-color: rgba(0,90,140,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(46,46,46,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -2305,8 +2296,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i16" src="https://i.imgur.com/9QyNQzC.gif"/>
 <!--#/#--><!--#i52.text.html:text/html-->
 <div id="i52">Aquí te contamos cómo. Leer más...</div>
-<!--#/#--><!--#i48.image.html:image/html-->
-<img id="i48" src="https://i.imgur.com/jwWXhGL.png"/>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#i54.image.html:image/html-->
@@ -2336,7 +2325,7 @@ document.addEventListener('DOMContentLoaded', function() {
         autoRotationEnabled: 'true',
         autoRotationDelay: '3',
         autoRotationTimeout: '25',
-        shadow: 'rgba(217,0,0,1)',
+        shadow: 'rgba(47,192,212,1)',
         perspective: '500',
         useSinglePerspective: 'false',
         useOffsetCompensation: 'true',
@@ -2371,10 +2360,6 @@ document.addEventListener('DOMContentLoaded', function() {
 bmShow('i16');
 /*#/#*//*#i52.i53.positioning.js:positioning/base/js.2*/
 bmShow('i52');
-/*#/#*//*#i48.image.js:image/base/js*/
-
-/*#/#*//*#i48.i49.positioning.js:positioning/base/js.2*/
-bmShow('i48');
 /*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
 bmShow('i26');
 /*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
@@ -2383,7 +2368,7 @@ var el = document.getElementById('i26');
 
 el.addEventListener('click', function(e){
     /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.facebook.com/efectopasillo.oficial/?__tn__=kC-R&eid=ARA-QJzapS00ptoumNy3E6zivSoxHWGMB9czBxN1S3B8Gix_rAO-sKceX1fdKZ5r095isKCSasKq8sAw&hc_ref=ARSkXRjMEjEaL278eI41Fo5uU6sXuO-EzftfUF9LryYYL3QobXACTIE1M7hiksAxs6Q&fref=nf'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2417,7 +2402,7 @@ var el = document.getElementById('i56');
 
 el.addEventListener('click', function(e){
     /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.facebook.com/efectopasillo.oficial/?__tn__=kC-R&eid=ARA-QJzapS00ptoumNy3E6zivSoxHWGMB9czBxN1S3B8Gix_rAO-sKceX1fdKZ5r095isKCSasKq8sAw&hc_ref=ARSkXRjMEjEaL278eI41Fo5uU6sXuO-EzftfUF9LryYYL3QobXACTIE1M7hiksAxs6Q&fref=nf'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2483,11 +2468,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Aquí te contamos cómo. Leer más...; customName: false;
 /*#/#*//*#i52.i53.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i48.image.meta:image/meta*/
-name: jwWXhGL.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i48.i49.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i26.button.meta:button/meta*/
 name: ;
 customName: false;
