--- a/Efecto Pasillo/ZoomExp300x600.html
+++ b/Efecto Pasillo/ZoomExp300x600.html
@@ -170,7 +170,7 @@
 <link rel="stylesheet" href="ism/css/my-slider.css"/>
 <script src="ism/js/ism-2.2.min.js"></script>
 
-</head>
+
 
 <body class="zoom" style="margin:0px;">
 
@@ -198,7 +198,7 @@
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none; font-family: Trebuchet MS;">Os esperamos en el Lunario del Auditorio Nacional, Ciudad de México, <b>el 6 de junio de 2019!</b> <br> ¡Ahí nos vemos!</span>
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none; font-family: Trebuchet MS;">Os esperamos en el Lunario del Auditorio Nacional, Ciudad de México, <b>el 6 de junio de 2019.</b> <br> ¡Ahí nos vemos!</span>
 
    <span class="tgx_text_medium" style="color: black;line-height:1.1em; font-size:16px; font-family: Trebuchet MS;">
                         <p style="margin-top:  2px; line-height: 1em; margin-left: -5px; "></p>
