--- a/Chicco Hot Sale/pequeno.html
+++ b/Chicco Hot Sale/pequeno.html
@@ -268,7 +268,7 @@
         <a href="https://tienda.mercadolibre.com.mx/chicco?utm_source=display&utm_medium=mosaic&utm_content=teaser&utm_campaign=1905-chicco-hs" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/YNeXdge.gif" alt="" /> 
+                <img src="https://i.imgur.com/whlwdAt.gif" alt="" /> 
                  </div>
             
                 <div class="te-transition">
