--- a/Disney/hover-text-big2.html
+++ b/Disney/hover-text-big2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
-    <title>Slidemap - 300x600 </title>
+    <title>Slide - 300x600 </title>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -36,7 +36,7 @@
     background: none;
     overflow: hidden;
     cursor: pointer;
-    border: 1px solid #c5c5c5;
+    border: 0px solid #c5c5c5;
 }
 
 #ghost{
@@ -111,7 +111,7 @@
 
             <div class="imgBx">
                 
-              <iframe  src="FadeBig2.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+              <iframe  src="FadeBig2.html" width="298" height="598" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
