--- a/Efecto Pasillo/circles and modals basic (with screen block, and hosting video) (1).html
+++ b/Efecto Pasillo/circles and modals basic (with screen block, and hosting video) (1).html
@@ -13,7 +13,7 @@
         <script src="https://unpkg.com/video.js/dist/video.min.js"></script>
 
         <script>
-            var linkRedirect = 'https://m.ticketmaster.com.mx/event/14005699B73F9541?';
+            var linkRedirect = 'https://m.ticketmaster.com.mx/ticket/checkout/fullcart.do?orddagsins=mxn';
             var config = [
                 {
                     start: 1,
@@ -26,7 +26,7 @@
                     detail: {//configuracion para el modal imagen, titulo, y texto de detail
                         imageUrl: 'https://i.imgur.com/Y7suu4M.png',
                         title: '',
-                        href: 'https://m.ticketmaster.com.mx/event/14005699B73F9541?',
+                        href: 'https://m.ticketmaster.com.mx/ticket/checkout/fullcart.do?orddagsins=mxn',
                         description: '¡Os esperamos en el Lunario del Auditorio Nacional!'
                     }
                 },{
@@ -40,7 +40,7 @@
                     detail: {
                         imageUrl: 'https://i.imgur.com/A3ufh23.png',
                         title: '',
-                        href: 'https://m.ticketmaster.com.mx/event/14005699B73F9541?',
+                        href: 'https://m.ticketmaster.com.mx/ticket/checkout/fullcart.do?orddagsins=mxn',
                         description: '¡La cita es este 6 de junio!'
                     }
                 },
@@ -55,7 +55,7 @@
                     detail: {
                         imageUrl: 'https://i.imgur.com/lzqiUnk.png',
                         title: '',
-                        href: 'https://m.ticketmaster.com.mx/event/14005699B73F9541?',
+                        href: 'https://m.ticketmaster.com.mx/ticket/checkout/fullcart.do?orddagsins=mxn',
                         description: '¿Quieres vernos en vivo?'
                     }
                 },
@@ -70,7 +70,7 @@
                     detail: {
                         imageUrl: 'https://i.imgur.com/OQiB0S7.png',
                         title: '',
-                        href: 'https://m.ticketmaster.com.mx/event/14005699B73F9541?',
+                        href: 'https://m.ticketmaster.com.mx/ticket/checkout/fullcart.do?orddagsins=mxn',
                         description: '¿Deseas viajar a Brasil? ¡#UnidosPodemos!'
                     }
                 }*/
