--- a/Panamericana Maestria/formulario-def.html
+++ b/Panamericana Maestria/formulario-def.html
@@ -666,7 +666,7 @@ AVISO DE PRIVACIDAD</a></label>
 
                 <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: 50px;">
 
-                    <img src="https://i.imgur.com/Cb0BlO2.png" style="height:115px; width:270px; text-decoration: none; margin-left: -25PX;">
+                    <img src="https://i.imgur.com/K2hBZWy.png" style="height:115px; width:270px; text-decoration: none; margin-left: -25PX;">
                 </span>
 
                 <span class="s-III" style="margin-top: -200px;">
