chicco sin puntos

--- a/Chicco Hot Sale/Venetian320x480.html
+++ b/Chicco Hot Sale/Venetian320x480.html
@@ -2279,7 +2279,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i48.image.html:image/html-->
 <img id="i48" src="https://i.imgur.com/i4PQ41e.png"/>
 <!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">Consiente a tu bebé con hasta 40% de descuento.</div>
+<div id="i50">Consiente a tu bebé con hasta 40% de descuento</div>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
