--- a/Chicco Hot Sale/fijo-gif.html
+++ b/Chicco Hot Sale/fijo-gif.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href='https://fonts.googleapis.com/css?family=Trebuchet MS;' rel='stylesheet' type='text/css'>
-    <title>Slider_Huawei</title>
+    <title>Slider</title>
     <style>
         .PapaJohnFijo a,
         .PapaJohnFijo a:hover {
@@ -244,7 +244,7 @@
                 <div style="margin-top:21px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
                         <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:21px;">
-						    Consiente a tu bebé con hasta 40% de descuento.
+						    Consiente a tu bebé con hasta 40% de descuento
 						</span>
                        
                       
