--- a/Chicco Hot Sale/Cube.html
+++ b/Chicco Hot Sale/Cube.html
@@ -865,7 +865,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Consiente a tu bebé con hasta 40% de descuento.</div>
+<div id="i34">Consiente a tu bebé con hasta 40% de descuento</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/n6Y6eZ0.jpg"/>
 <!--#/#--><!--#i6.i278.image.html:image/html-->
