--- a/Chicco Hot Sale/Cube.html
+++ b/Chicco Hot Sale/Cube.html
@@ -833,7 +833,7 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Consiente a tu bebé con hasta 40% de descuento.</div>
+<div id="i14">Consiente a tu bebé con hasta 40% de descuento</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/NxJhHq4.jpg"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -849,7 +849,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Consiente a tu bebé con hasta 40% de descuento.</div>
+<div id="i24">Consiente a tu bebé con hasta 40% de descuento</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/yb8hJpR.jpg"/>
 <!--#/#--><!--#i5.i276.image.html:image/html-->
