--- a/San Juan/hover-text-big3.html
+++ b/San Juan/hover-text-big3.html
@@ -111,12 +111,12 @@
 
             <div class="imgBx">
                 
-              <iframe  src="fade-completo.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+              <iframe  src="FadeBig.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
             <div class="details">
-                <iframe  src="story-resize.html" width="307" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: -38px; margin-top: -68px;"></iframe>
+                <iframe  src="story-resize1.html" width="307" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: -38px; margin-top: -68px;"></iframe>
 
              
 
