--- a/San Juan/FadeBig.html
+++ b/San Juan/FadeBig.html
@@ -57,7 +57,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/dE91wmt.png");
+            background: url("https://i.imgur.com/vykp2CB.gif");
             background-size: cover;
         }
 
