--- a/San Juan/ZoomExp300x600.html
+++ b/San Juan/ZoomExp300x600.html
@@ -159,7 +159,7 @@ a {text-decoration: none;}
       <img src="https://i.imgur.com/23u1qWy.png">
       
     <li>
-      <img src="https://i.imgur.com/5jF8wgt.png">
+      <img src="https://i.imgur.com/vykp2CB.gif">
       
     <li>
       <img src="https://i.imgur.com/nolJdug.png">
