--- a/San Juan/ZoomExp300x600.html
+++ b/San Juan/ZoomExp300x600.html
@@ -149,11 +149,11 @@ a {text-decoration: none;}
 </head>
 <body class="zoom" style="margin:0px;">
   <a href="https://huevosanjuan.com.mx/" target="_blank">
- 	 <div class="wrapper size_300x250">
+ 	 <div class="wrapper size_300x250" >
     
 
   <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:75%; color: white;"><i><b></b></i></span></div>
-<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 480px; border-radius: none;">
+<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 480px; border-radius: none; cursor:pointer;">
   <ol>
     <li>
       <img src="https://i.imgur.com/23u1qWy.png">
