--- a/Saba Sparrow/fijo-gif.html
+++ b/Saba Sparrow/fijo-gif.html
@@ -230,9 +230,9 @@
     <div class="te-container">
         
             <div id="te-wrapper" class="te-wrapper">
-                <a href="https://www.walmart.com.mx/productos?Ntt=chicco&No=0?utm_source=display&utm_medium=mosaic&utm_content=teaser&utm_campaign=1905-chicco-hs" target="_blank">
+                <a href="https://saba.com.mx/" target="_blank">
 
-        <!--    <div class="cta"> <a href="https://www.walmart.com.mx/productos?Ntt=chicco&No=0?utm_source=display&utm_medium=mosaic&utm_content=teaser&utm_campaign=1905-chicco-hs" target="_blank">
+        <!--    <div class="cta"> <a href="https://saba.com.mx/" target="_blank">
     <img src="https://i.imgur.com/i4PQ41e.png" style="height: 37px;"></a></div> -->
 
                 
