--- a/FIRMAS BIZNAGA/FIRMAS_Angelica.html
+++ b/FIRMAS BIZNAGA/FIRMAS_Angelica.html
@@ -12,7 +12,7 @@
 <td width="170" height="170" align="right" valign="top">
 
 	<!-- Logo -->
-<a href="http://biznagamedia.com/" target="_blank"><img src="https://i.imgur.com/bx6laPU.png" style="height:140px;padding-top:15px;"></a>
+<a href="http://biznagamedia.com/" target="_blank"><img src="https://i.imgur.com/eNb9fj6.png" style="height:140px;padding-top:15px;"></a>
 </td>
 
 <!-- Texto -->
