--- a/FIRMAS BIZNAGA/FIRMAS_Maria.html
+++ b/FIRMAS BIZNAGA/FIRMAS_Maria.html
@@ -7,16 +7,16 @@
 
 <!-- Formato y bord -->
 
-<table width="440" border="0" cellspacing="0" cellpadding="0" style="border:3px solid #4cb4b3;">
+<table width="440" border="0" cellspacing="0" cellpadding="0" style="border:1px solid #c5c5c5;">
 <tr>
-<td width="170" height="170" style="border:1px solid #4cb4b3; border-right: none; border-left: none;" align="right" valign="top">
+<td width="170" height="170" align="right" valign="top">
 
 	<!-- Logo -->
-<a href="http://biznagamedia.com/" target="_blank"><img src="https://i.imgur.com/bx6laPU.png" style="height:140px;padding-top:15px;"></a>
+<a href="http://biznagamedia.com/" target="_blank"><img src="https://i.imgur.com/eNb9fj6.png" style="height:140px;padding-top:15px;"></a>
 </td>
 
 <!-- Texto -->
-<td width="0" height="0" style="padding-left:10px; padding-top:20px; font-family: Helvetica, Arial, sans-serif; font-size:13px; border:1px solid #4cb4b3; border-left: none; border-right: none; line-height:0px;" valign="bottom"> 
+<td width="0" height="0" style="padding-left:10px; padding-top:20px; font-family: Helvetica, Arial, sans-serif; font-size:13px; border-left: none; border-right: none; line-height:0px;" valign="bottom"> 
 <p style="font-size:22px; color:#4cb4b3;"><b>María Aguilera</b></p>
 <p><b>Head of product.</b></p>
 <p style="line-height: 1em;"> &middot;Mail: maria@biznagamedia.com <br>
