--- a/FIRMAS BIZNAGA/FIRMAS_Angelica.html
+++ b/FIRMAS BIZNAGA/FIRMAS_Angelica.html
@@ -20,7 +20,7 @@
 <p style="font-size:22px; color:#4cb4b3;"><b>Angélica Bocanegra</b></p>
 <p><b>Art Director.</b></p>
 <p style="line-height: 1em;"> &middot;Mail: angelica@biznagamedia.com <br>
-<p style="line-height: 0,5em;"> &middot;+57 311 627 34 21 <br>
+<p style="line-height: 0,5em;"> &middot;Telf: +57 311 627 34 21 <br>
 <b></b></p>
 
 
