--- a/Tena/Fade300x250.html
+++ b/Tena/Fade300x250.html
@@ -62,11 +62,11 @@
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/ejVYBfk.gif)
+            background-image: url(https://i.imgur.com/1xqQfNH.gif)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/yH4ggtL.jpg)
+            background-image: url(https://i.imgur.com/ljwf72C.png)
 
         }
 
