--- a/Tena/ZoomExp300x600.html
+++ b/Tena/ZoomExp300x600.html
@@ -192,8 +192,8 @@ a {text-decoration: none;}
   </ol>
   
 </div>
-<div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none;"> Haz todo lo que te gusta y vive sin límites a cada momento.</span><br>
-     <span class="ism_text ism_text_light" style="color:#000000; font-size:14px;  text-decoration: none; "><p  style="text-align: center; width: 93%; margin-left: 12px; margin-top: -15px;">Vístete para cualquier ocasión: tienes los colores nude, blanco y próximamente  negro para elegir. Todas con la protección, comodidad y máxima discreción que buscas.</p></span>
+<div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:22px; text-decoration: none;"> Vístete para cualquier ocasión con la protección <br>y comodidad que buscas.</span><br>
+     <span class="ism_text ism_text_light" style="color:#000000; font-size:15px;  text-decoration: none; "><p  style="text-align: center; width: 93%; margin-left: 12px; margin-top: -15px;">Puedes elegir entre nude blanco <br> y próximamente negro, para <br> mayor discresión.</p></span>
 
     
     
