--- a/FIRMAS BIZNAGA/FIRMAS_Angelica.html
+++ b/FIRMAS BIZNAGA/FIRMAS_Angelica.html
@@ -7,7 +7,7 @@
 
 <!-- Formato y bord -->
 
-<table width="440" border="0" cellspacing="0" cellpadding="0" style="border:1px solid #c5c5c5;">
+<table width="455" border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="170" height="170" align="right" valign="top">
 
@@ -16,18 +16,15 @@
 </td>
 
 <!-- Texto -->
-<td width="0" height="0" style="padding-left:5px; padding-top:50px; font-family: Helvetica, Arial, sans-serif; font-size:16px; ;" valign="bottom"> 
-<p style="font-size:22px; color:#4cb4b3; margin-top: -33px;"><b>Angélica Bocanegra</b></p>
-<p><b>Art Director.</b></p>
-<p style="line-height: 1em;"> &middot;Mail: angelica@biznagamedia.com  <br>
-<p style="line-height: 0,5em;"> &middot;Telf: +57 311 627 34 21<br>
+<td width="0" height="0" style="padding-left:5px; padding-top:5px; font-family: Levenim MT; font-size:16px;"> 
+
+<p style="font-size:22px;color:#4cb4b3;line-height:0em;">Angelica Bocanegra
+<p style="color:#888888;line-height: 0,2em;">Art Director.
+<p style="color:#888888;line-height: 0em;">Mail: angelica@biznagamedia.com  <br>
+<p style="color:#888888;line-height: 0,1em;">Telf: +57 311 627 34 21<br>
+<p style="color:#888888;line-height: 0em;">Skype: bocangela
 <b><br>
 </b></p>
-
-
-
-
-
 </td>
 </tr>
 </table>
