--- a/FIRMAS BIZNAGA/FIRMAS_Antonio.html
+++ b/FIRMAS BIZNAGA/FIRMAS_Antonio.html
@@ -7,7 +7,7 @@
 
 <!-- Formato y bord -->
 
-<table width="440" border="0" cellspacing="0" cellpadding="0" style="border:1px solid #c5c5c5;">
+<table width="443" border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="170" height="170" align="right" valign="top">
 
@@ -16,18 +16,14 @@
 </td>
 
 <!-- Texto -->
-<td width="0" height="0" style="padding-left:5px; padding-top:50px; font-family: Helvetica, Arial, sans-serif; font-size:16px; ;" valign="bottom"> 
-<p style="font-size:22px; color:#4cb4b3; margin-top: -33px;"><b>Antonio Navas</b></p>
-<p><b>CEO & Founder.</b></p>
-<p style="line-height: 1em;"> &middot;Mail: antonio@biznagamedia.com<br>
-<p style="line-height: 0,5em;"> &middot;Telf: +34 670 56 46 86<br>
+<td width="0" height="0" style="padding-left:5px; padding-top:40px; font-family: Levenim MT; font-size:16px;"> 
+
+<p style="font-size:22px;color:#4cb4b3;line-height:0em;">Antonio Navas
+<p style="color:#888888;line-height: 0,2em;">CEO & Founder.
+<p style="color:#888888;line-height: 0em;">Mail: antonio@biznagamedia.com <br>
+<p style="color:#888888;line-height: 0,1em;">Skype: antonioe.navas<br>
 <b><br>
 </b></p>
-
-
-
-
-
 </td>
 </tr>
 </table>
