--- a/PhilipsMorris formulario/formulario-def.html
+++ b/PhilipsMorris formulario/formulario-def.html
@@ -615,7 +615,7 @@
                 <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
                 <form id="question" class="FR form">
                     <center>
-                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/NSepFlf.jpg" style="height:100px; width: 310px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
+                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/4Jlpwjt.jpg" style="height:100px; width: 310px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
     box-shadow:0 0 0px 0px #fff; margin-bottom: -5px;"></span>
 
     <span style="bottom:5px; text-align:center ; float:center; background-color: #f4f4f4;"> <img src="https://i.imgur.com/q7lKa8P.jpg" style="height:180px; width: 220px; text-decoration: none; border-radius:0px; margin-top:20px; margin-left: -10px; margin-bottom: -15px;"></span>
