--- a/Huawei Anuncio/story-resize1.html
+++ b/Huawei Anuncio/story-resize1.html
@@ -388,7 +388,7 @@
                           </a> </span>
                      
                      <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#8b8b8b;  margin-top:20px; margin-bottom: -20px; font-size: 14px; line-height: 1.3em; text-align: justify; width:100%;">
-     <i><p>De aquí a su lanzamiento en la ventana de octubre/noviembre todo puede pasar, pero el escenario se ve bastante optimista para Huawei. Es altamente probable que de aquí a esos meses todo esto haya terminado. Las presiones internacionales e internas, casi de seguro van a llevar a que esta decisión de la administración Trump se revierta completamente y se llegue a un acuerdo.<b> </b></p> <br>
+     <i><p>El llamado que hacemos nosotros es a mantener la calma si tú, un amigo o un familiar tienen un celular Huawei, todo va a estar bien. Si quieres uno, ve por él si lo querías, no hay riesgo en eso.<b> </b></p> <br>
     
 
      </i>        
