--- a/TENA PANTS/Fade300x250.html
+++ b/TENA PANTS/Fade300x250.html
@@ -66,15 +66,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/z3LLc19.jpg)
+            background-image: url(https://i.imgur.com/oRh7L23.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/q3hL1qF.jpg)
+            background-image: url(https://i.imgur.com/paNk6R0.jpg)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/iMzUEhw.jpg)
+            background-image: url(https://i.imgur.com/HBUkAl1.jpg)
 
         }
 
