--- a/TENA PANTS/ZoomExp300x600.html
+++ b/TENA PANTS/ZoomExp300x600.html
@@ -208,7 +208,7 @@ a {text-decoration: none;}
 
  <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none;">                    texto                                   </span>
     
-                  <div class="cta2" > <img src="https://i.imgur.com/ZVty3sk.jpg" style="height: 80px; margin-left: -80px; bottom: 10px;"></a></div>
+                  <div class="cta2" > <img src="https://i.imgur.com/Igx3fXv.jpg" style="height: 80px; margin-left: -80px; bottom: 10px;"></a></div>
 
                   <div class="cta" > <img src="https://i.imgur.com/e2ZXYND.png" style="height: 53px; margin-left: -35px;"></a></div>
 
