--- a/BCP2/300x600/04CtaPremioZoomExp300x600.html
+++ b/BCP2/300x600/04CtaPremioZoomExp300x600.html
@@ -204,7 +204,7 @@
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none; font-family: Trebuchet MS;">Participa de 2 sorteos de 1 MILLÓN de soles y 10 sorteos de S/ 20,000 al año</span>
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:18px; text-decoration: none; font-family: Trebuchet MS;">Participa de 2 sorteos de 1 MILLÓN de soles y 10 sorteos de S/ 20,000 al año.</span>
 
    <span class="tgx_text_medium" style="color: black;line-height:1.1em; font-size:16px; font-family: Trebuchet MS;">
                         <p style="margin-top:  2px; line-height: 1em; margin-left: -5px; "></p>
