--- a/ConforAuto/Venetian300x600.html
+++ b/ConforAuto/Venetian300x600.html
@@ -2263,7 +2263,7 @@ de neumáticos</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/nE7Kz7B.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/KmMR8Ie.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/ludk6mr.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
