--- a/ConforAuto/Fijo300x250.html
+++ b/ConforAuto/Fijo300x250.html
@@ -222,10 +222,10 @@
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:70%; color: white;"></span></div>
                
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/pfDiHKe.png" alt="" /> 
+                <img src="https://i.imgur.com/PjKmA1P.png" alt="" /> 
                  </div>
                 <div class="te-cover"> 
-                    <img src="https://i.imgur.com/pfDiHKe.png" alt="" /> 
+                    <img src="https://i.imgur.com/PjKmA1P.png" alt="" /> 
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
