--- a/ConforAuto/Fijo300x600.html
+++ b/ConforAuto/Fijo300x600.html
@@ -229,11 +229,11 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i.imgur.com/nE7Kz7B.png" alt="" />
+                    <img src="https://i.imgur.com/KmMR8Ie.png" alt="" />
                     
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/nE7Kz7B.png" alt="" />
+                    <img src="https://i.imgur.com/KmMR8Ie.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
