--- a/ConforAuto/fade-small.html
+++ b/ConforAuto/fade-small.html
@@ -67,7 +67,7 @@
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/pfDiHKe.png)
+            background-image: url(https://i.imgur.com/PjKmA1P.png)
         }
 
         .corona .bg.cover-2 {
@@ -75,7 +75,7 @@
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/dqfj5Gd.png)
+            background-image: url(https://i.imgur.com/OKM2fei.png)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
